--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,1 +1,7 @@
-%h1 index
+- @posts.each do |post|
+  %h2= post.title
+  %p
+    Published at
+  = time_ago_in_words(post.created_at)
+  
+  = link_to "新規投稿", new_post_path
