--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,6 +2,8 @@
   %h2= link_to post.title, post
   %p
     Published at
-  = time_ago_in_words(post.created_at)
+    = time_ago_in_words(post.created_at)
+    by
+    = post.user.email
   
-  = link_to "新規投稿", new_post_path
+= link_to "新規投稿", new_post_path
